# SocialNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Edge.h  Friendship.h  SocialNetwork.h  SocialNetworkUser.h  UndirectedGraph.h  Vertex.h
include/abstraction/: Edge.h  UndirectedGraph.h  Vertex.h
include/exception/: SocialNetworkException.h
src/: Edge.cpp  Friendship.cpp  SocialNetwork.cpp  SocialNetworkUser.cpp  UndirectedGraph.cpp  Vertex.cpp
src/abstraction/: Edge.cpp  UndirectedGraph.cpp  Vertex.cpp
src/exception/: SocialNetworkException.cpp
tests/: CMakeLists.txt
tests/mocks/include/: MockEdge.h  MockFriendship.h  MockSocialNetwork.h  MockSocialNetworkUser.h  MockUndirectedGraph.h  MockVertex.h
tests/mocks/stubs/: Friendship_Stub.cpp  MockEdge.cpp  MockUndirectedGraph.cpp  MockVertex.cpp  SocialNetworkUser_Stub.cpp  Vertex_Stub.cpp
tests/unit-tests/: test_Friendship.cpp  test_SocialNetwork.cpp  test_SocialNetworkUser.cpp
